0032 T4 · Arrow en Node y Java, medido antes de tocar una imagen (medida-w3-arrow.py): Java por DuckDB JDBC → Arrow Java es exacto en los 23 tipos y va a 14,6 M filas/s (20× las filas-objeto) por 5 MB de jars y un --add-opens; en Node, los valores tipados de DuckDB por columnas cumplen el contrato sin añadir nada, Arrow JS no (fechas y decimales sin forma, nulos perdidos, 21 MB) y ningún camino JS materializa 10 M de filas en menos de 10 s — en Node no se materializan: columnas hasta un límite y SQL para lo grande
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>